Fix main section gap in full screen

--- a/home/css/_main.sass
+++ b/home/css/_main.sass
@@ -86,7 +86,7 @@ nav
 main
   border-bottom: 0.1rem solid $mediumGrey
   margin-bottom: $gapSize - $mainElOffset
-  height: 47.5rem + $mainElOffset
+  height: 47.7rem + $mainElOffset
   position: relative
   top: - $mainElOffset - 0.5rem
   z-index: -1
